Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95583

Incorrect shadowmap bounds when referencing camera from different node

XMLWordPrintable

    • 58d76ba85592130f8a951dc795d1775621d6a761 (qt/qtquick3d/dev) 64de87bd86df1951cbd708a57c79f311015f1b8f (qt/qtquick3d/6.2)

      If a camera is stored in a node that is referenced from another view containing the rest of the geometry the bounds for the shadowmap will be too small. This is because the shadowmap bounds are calculated from the parent of the camera and not the referencing view where the geometry is placed.

        1. QTBUG-95583.zip
          26 kB
          Jonas Karlsson
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jokarlss Jonas Karlsson
            jokarlss Jonas Karlsson
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes