Fix shadow map bounds

If the camera is not a child of the scene that is rendered then the
bounds of the camera's parent will be incorrect so we go through all the
opaque objects and compute their bounds and use these instead.

Fixes: QTBUG-95583
Change-Id: I1da3e759052bd02d82a7c66965d8674529418d4a
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 58d76ba85592130f8a951dc795d1775621d6a761)